# cnb-sense-graph

./: .gitignore  README.md  config.py  pyproject.toml  tasks.py
cnb_def_graph/consec/: disambiguation_instance.py  sense_extractor.py
cnb_def_graph/def_graph/: disambiguate_defs.py
cnb_def_graph/disambiguator/: disambiguator.py
cnb_def_graph/sense_inventory/: create_sense_inventory.py  sense_inventory.py
cnb_def_graph/sense_proposer/: sense_proposer.py
cnb_def_graph/token_tagger/: token_tagger.py
cnb_def_graph/utils/: read_dicts.py
dry_run/: dry_run_senses.txt
tests/labels/: jeff_bezos.json  jeff_bezos_0.json  jeff_bezos_1.json  jeff_bezos_2.json  millionaire.json  millionaire_0.json  st stephens.json  st stephens_0.json
tests/tests/: test_disambiguator.py  test_input_length.py  test_proposer.py  test_tokenizer.py
tools/: disambiguate.py
